@@ -13,6 +13,7 @@ import java.util.concurrent.BlockingQueue;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.function.BiConsumer;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
@@ -49,13 +50,35 @@ public class GraphRebuilder {
    * @param batchSize The number of Hashes to fetch from the database at the same time.
    */
   public void rebuildGraphDb(int chunkCount, int chunkId, int threads, int batchSize) {
+    rebuildGraphDb(chunkCount, chunkId, threads, batchSize, null);
+  }
+
+  /**
+   * Starts rebuilding the graphDb, blocking until finished or interrupted.
+   * Reports progress via the provided callback.
+   *
+   * @param chunkCount The total number of parallel GraphRebuilders.
+   * @param chunkId The (0-based) index of this GraphRebuilder.
+   * @param threads The number of threads to use to rebuild the graph.
+   * @param batchSize The number of Hashes to fetch from the database at the same time.
+   * @param progressCallback Called for each SD processed: (1, null) on success, (1, exception) on failure. May be null.
+   */
+  public void rebuildGraphDb(int chunkCount, int chunkId, int threads, int batchSize,
+                             BiConsumer<Integer, Exception> progressCallback) {
     BlockingQueue<String> taskQueue = new ArrayBlockingQueue<>(batchSize);
     AtomicInteger pendingTasks = new AtomicInteger(0);
     ExecutorService executorService = ProcessorUtils.createProcessors(threads, taskQueue, hash -> {
+      Exception caught = null;
       try {
         addSdToGraph(hash);
+      } catch (Exception e) {
+        log.error("Failed to add SD {} to graph", hash, e);
+        caught = e;
       } finally {
         pendingTasks.decrementAndGet();
+        if (progressCallback != null) {
+          progressCallback.accept(1, caught);
+        }
       }
     }, "GraphRebuilder");
 
@@ -66,7 +89,7 @@ public class GraphRebuilder {
       lastCount = activeSdHashes.size();
       log.info("Rebuilding GraphDB: Fetched {} Hashes", lastCount);
       if (lastCount > 0) {
-        lastHash = activeSdHashes.get(activeSdHashes.size() - 1);
+        lastHash = activeSdHashes.getLast();
         for (String hash : activeSdHashes) {
           try {
             pendingTasks.incrementAndGet();
